--- a/blocks/content/table/__cell/_theme/table__cell_theme_dark.css
+++ b/blocks/content/table/__cell/_theme/table__cell_theme_dark.css
@@ -1,7 +1,12 @@
+@import url(../../__heading/_theme/table__heading_theme_dark.css);
+@import url(../../__text/_theme/table__text_theme_dark.css);
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  display: flex;
+  flex-direction: column;
 }
