--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,9 @@
 @import url(../../vendor/fonts.css);
+@import url(../header/header.css);
+@import url(../content/content.css);
+@import url(../footer/footer.css);
+@import url(../rotation/rotation.css);
+
 
 .page {
   min-width: 1100px;
