--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -8,6 +8,6 @@
   font-size: 18px;
   font-weight: normal;
   color: white;
-  position: absolute;
-  bottom: 18px;
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
