--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -1,13 +1,11 @@
 .two-columns__brief {
   margin: 0;
   padding: 0;
-}
-
-.two-columns__brief {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
-  width: 175px;
+  max-width: 175px;
+  width:100%;
   flex-direction: column;
 }
