--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,10 +1,8 @@
 .feynman__title {
   margin: 0;
   padding: 0;
-}
-
-.feynman__title {
-  width: 648px;
+  max-width: 648px;
+  width: 100%;
   text-align: center;
   padding-top: 100px;
   z-index: 2;
