--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -1,4 +1,7 @@
 .footer__column-links {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   padding-top: 20px;
   padding-bottom: 16px;
   display: flex;
