--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,10 +1,8 @@
 .header__subtitle {
   margin: 0;
   padding: 0;
-}
-
-.header__subtitle {
-  width: 388px;
+  max-width: 388px;
+  width:100%;
   position: absolute;
   bottom: 30px;
   left: 64px;
