--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,10 +1,8 @@
 .header__title {
   margin: 0;
   padding: 0;
-}
-
-.header__title {
-  width: 730px;
+  max-width: 730px;
+  width:100%;
   padding-left: 64px;
   align-self: center;
   z-index: 2;
