--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,8 +1,10 @@
 .kaufman__triangle {
+  background-image: url(../../../images/kaufman-triangle.svg);
+  background-size: cover;
   position: absolute;
   height: 877px;
   width: 877px;
+  top: 0;
   right: -210px;
   z-index: 0;
-  animation: rotation 20s infinite;
 }
