--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,7 +1,12 @@
 .resources__logo-zone {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   display: flex;
   margin: auto;
   width: 1100px;
   margin-top: 80px;
   margin-bottom: 217px;
+  align-items: center;
+  justify-content: center;
 }
