--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,15 +1,12 @@
 .two-columns__paragraph {
   margin: 0;
   padding: 0;
-}
-
-.two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   padding-bottom: 30px;
 }
 
-.two-columns__paragraph:nth-of-type(3n) {
+.two-columns__paragraph:last-child {
   padding-bottom: 0;
 }
