--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,7 +1,10 @@
 .video__iframe {
   margin-right: 20px;
+  width: 515px;
+  height: 316px;
+  border: 0;
 }
 
-.video__iframe:nth-of-type(2n) {
+.video__iframe:last-of-type {
   margin-right: 0;
 }
