--- a/blocks/table/_theme/table_theme_dark.css
+++ b/blocks/table/_theme/table_theme_dark.css
@@ -1,4 +1,7 @@
 .table_theme_dark {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   width: 1100px;
   padding-bottom: 90px;
   display: flex;
