--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -5,9 +5,6 @@
   padding-top: 20px;
   padding-bottom: 16px;
   display: flex;
+  gap: 10px;
   flex-direction: column;
-}
-
-.footer__column-links:last-of-type {
-  padding-bottom: 0;
 }
